--- a/app/views/track_units/index.html.erb
+++ b/app/views/track_units/index.html.erb
@@ -3,7 +3,7 @@
 <ul>
   <% @track_units.each do |unit| %>
     <%= link_to track_unit_path(unit) do %>
-      <li><p><%= unit.name %></p></li>
+      <li><p><%= unit.title %></p></li>
     <% end %>
   <% end %>
 </ul>
