--- a/app/views/track_units/show.html.erb
+++ b/app/views/track_units/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Track Units Show</h1>
 
-<h4><%= @track_unit.name %></h4>
+<h4><%= @track_unit.title %></h4>
 <ul>
   <% @track_lessons.each do |lesson| %>
     <li>
