Update FontAwesome reference in .scss files

--- a/app/views/shared/_sidecar.html.erb
+++ b/app/views/shared/_sidecar.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="floating-dropdown__item floating-dropdown--hidden-item text-center" data-toggle='tooltip' data-placement='left' title='Forum'>
     <%= link_to forum_link, target: :_blank, rel: 'noreferrer' do %>
-      <i class="fas fa-group" aria-hidden="true"></i>
+      <i class="fas fa-users" aria-hidden="true"></i>
     <% end %>
   </div>
   <div class="floating-dropdown__item main-floating-btn">
