--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -2,6 +2,7 @@
   <h1 class="text-center camel light curriculum-title"><%= @track.title %></h1>
   <p class="text-center track-description"><%= @track.description %></p>
 
+
   <% @courses.each do |course| %>
     <%= render 'courses/course_card', course: course %>
   <% end %>
@@ -25,4 +26,5 @@
         %>
       </p>
   <% end %>
+  <p class="text-center track-description">You are viewing the <%= @track.title %> track.  To view all available tracks <%= link_to 'Click here', tracks_path %></p>
 </div>
