clean up tracks views

--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -10,7 +10,7 @@
   <% if user_signed_in? %>
     <%if current_user.track == @track %>
       <p class="text-center track-description">
-        THIS IS YOUR CURRENTLY SELECTED TRACK
+        You are currently enrolled in this track.
       </p>
     <% else %>
       <p class="text-center track-description">
