--- a/app/views/static_pages/home/_curriculum.html.erb
+++ b/app/views/static_pages/home/_curriculum.html.erb
@@ -9,12 +9,14 @@
         <div class="row curriculum-details-grid">
 
           <% available_courses.each do |course| %>
-          <div class="curriculum-details-tile align-items-center">
-            <%= image_tag course[:badge_image_url], alt: course[:badge_alt_text] %>
-            <h4 class="bold text-uppercase">
-            <%= link_to `#{course[:title]}`, `#{course[:title_url]}`%>
-            </h4>
-          </div>
+            <div class="curriculum-details-tile align-items-center">
+              <%= link_to `#{course[:path]}`, `#{course[:path]}` %>
+                <%= image_tag course[:badge_image_url], alt: course[:badge_alt_text] %>
+                  <h4 class="bold text-uppercase">
+                    <%= course[:title] %>
+                  </h4>
+              <% end %>
+            </div>
           <% end %>
 
         </div>
