--- a/app/views/static_pages/home/_curriculum.html.erb
+++ b/app/views/static_pages/home/_curriculum.html.erb
@@ -10,15 +10,14 @@
 
           <% available_courses.each do |course| %>
             <div class="curriculum-details-tile align-items-center">
-              <%= link_to `#{course[:path]}`, `#{course[:path]}` %>
+            <%= link_to course[:path], :class =>"course-tile-path" do %>  
                 <%= image_tag course[:badge_image_url], alt: course[:badge_alt_text] %>
-                  <h4 class="bold text-uppercase">
+                <h4 class="bold text-uppercase">
                     <%= course[:title] %>
                   </h4>
-              <% end %>
+            <% end %>      
             </div>
           <% end %>
-
         </div>
       </div>
     </div> <!-- /.row -->
