--- a/app/assets/stylesheets/components/home/curriculum_details.scss
+++ b/app/assets/stylesheets/components/home/curriculum_details.scss
@@ -21,6 +21,10 @@
       flex-direction: column;
     }
 
+    .course-tile-path {
+      text-decoration: none;
+    }
+
     .curriculum-details-tile {
       @include box-shadow(0 7px 16px 0 rgba(0, 0, 0, 0.05));
       background: $white;
