--- a/app/views/static_pages/home/_curriculum.html.erb
+++ b/app/views/static_pages/home/_curriculum.html.erb
@@ -9,15 +9,14 @@
         <div class="row curriculum-details-grid">
 
           <% available_courses.each do |course| %>
-            <div class="curriculum-details-tile align-items-center">
-            <%= link_to course[:path], :class =>"course-tile-path" do %>  
-                <%= image_tag course[:badge_image_url], alt: course[:badge_alt_text] %>
+            <%= link_to course[:path], :class =>"curriculum-details-tile align-items-center" do %>  
+              <%= image_tag course[:badge_image_url], alt: course[:badge_alt_text] %>
                 <h4 class="bold text-uppercase">
-                    <%= course[:title] %>
-                  </h4>
+                  <%= course[:title] %>
+                </h4>
             <% end %>      
-            </div>
           <% end %>
+          
         </div>
       </div>
     </div> <!-- /.row -->
