Chore: Rename Advert
Because:
* It is no longer a Viking School advert.

--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -63,7 +63,7 @@
       sub_heading: 'Chat with our friendly Odin community in our Discord chatrooms!'
     %>
 
-    <%= render 'viking-advert' %>
+    <%= render 'advert' %>
   </div>
 </div>
 
