Chore: Unscope Lesson Slugs from their Path/Course.
Because:
* At present we have to provide the lessons path and course when generating lesson path routes. This results in messy code and very long lesson paths in a few cases.

This commit:
* Remove the friendly is scope on lessons so we can generate unique slugs for lessons with the same name.
* Keep external urls that use the old scheme working by adding a conditional to only use the path and course params when finding lessons if those params have been provided.
* Add a request spec around the above conditional behaviour.
* Update all instances of path_course_lesson_url route helpers to now use the shorter lesson_path route helper.

--- a/app/views/lessons/_lesson_buttons.html.erb
+++ b/app/views/lessons/_lesson_buttons.html.erb
@@ -9,7 +9,7 @@
 
 <% if lesson.next_lesson %>
   <%= link_to 'Next Lesson',
-      path_course_lesson_path(course.path, course, lesson.next_lesson),
+      lesson_path(lesson.next_lesson),
       title: "Move on to '#{lesson.next_lesson.title}'",
       class: "button #{next_lesson_button_state(lesson)} lesson-button-group__item lesson-button",
       data: { test_id: 'next-lesson-btn' }
