--- a/app/views/users/_skill.html.erb
+++ b/app/views/users/_skill.html.erb
@@ -15,11 +15,7 @@
       <%= link_to 'Open', path_course_path(course.path, course), class: 'button button--transparent skill__button', data: { test_id: "#{course.title.downcase}-open-btn" } %>
     <% elsif course_started_by_user?(course, current_user) %>
       <%= link_to 'Resume',
-        path_course_lesson_url(
-          course.path,
-          course,
-          next_lesson_to_complete(course, current_user.lesson_completions_for_course(course))
-        ),
+        lesson_path(next_lesson_to_complete(course, current_user.lesson_completions_for_course(course))),
         class: 'button button--primary skill__button',
         data: { test_id: "#{course.title.downcase}-resume-btn" }
       %>
