--- a/app/views/static_pages/faq/_faq_card.html.erb
+++ b/app/views/static_pages/faq/_faq_card.html.erb
@@ -1,5 +1,5 @@
 <div class="card faq-card">
-  <a role="button" data-toggle="collapse" data-parent="#faq-accordion" href="#faq-item-<%= index %>" aria-expanded="true" aria-controls="faq-item-<%= index %>">
+  <a role="button" data-toggle="collapse" data-parent="#faq-accordion" href="#faq-item-<%= index %>" aria-expanded="true" aria-controls="faq-item-<%= index %>" data-controller="faq" data-action="faq#collapseHandler">
     <div class="card-header faq-card-header" role="tab">
       <h2 class="secondary bold faq-question-title">
         <%= faq_item[:question] %>
