--- a/app/assets/stylesheets/components/project_submissions/submissions.scss
+++ b/app/assets/stylesheets/components/project_submissions/submissions.scss
@@ -1,18 +1,18 @@
 .submissions {
-  margin-bottom: 2em;
-  text-align: left;
+  // margin-bottom: 2em;
+  // text-align: left;
 
-  &__header {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1.5em;
-    align-items: center;
+  // &__header {
+  //   display: flex;
+  //   justify-content: space-between;
+  //   margin-bottom: 1.5em;
+  //   align-items: center;
 
-    @include media-breakpoint-down(sm) {
-      display: block;
-      text-align: center;
-    }
-  }
+  //   @include media-breakpoint-down(sm) {
+  //     display: block;
+  //     text-align: center;
+  //   }
+  // }
 
   &__title {
     font-size: 2.5em;
