--- a/app/assets/stylesheets/components/react_modal.scss
+++ b/app/assets/stylesheets/components/react_modal.scss
@@ -1,39 +1,39 @@
 .react-modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width:100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-  z-index: 100;
+  // position: fixed;
+  // top: 0;
+  // left: 0;
+  // width:100%;
+  // height: 100%;
+  // background: rgba(0, 0, 0, 0.6);
+  // z-index: 100;
 
-  &__body {
-    position:fixed;
-    background: white;
-    height: auto;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    padding: 2.5rem;
-    width: 40%;
-    border-radius: 10px;
-    
-    @include media-breakpoint-down(lg) {
-      width: 60%;
-    }
+  // &__body {
+  //   position:fixed;
+  //   background: white;
+  //   height: auto;
+  //   top:50%;
+  //   left:50%;
+  //   transform: translate(-50%,-50%);
+  //   padding: 2.5rem;
+  //   width: 40%;
+  //   border-radius: 10px;
 
-    @include media-breakpoint-down(md) {
-      width: 80%;
-    }
+  //   @include media-breakpoint-down(lg) {
+  //     width: 60%;
+  //   }
 
-    @include media-breakpoint-down(sm) {
-      width: 90%;
-    }
-  }
+  //   @include media-breakpoint-down(md) {
+  //     width: 80%;
+  //   }
 
-  &--hidden {
-    display: none;
-  }
+  //   @include media-breakpoint-down(sm) {
+  //     width: 90%;
+  //   }
+  // }
+
+  // &--hidden {
+  //   display: none;
+  // }
 
   &__close-btn {
     color: $button-primary;
