--- a/app/views/static_pages/faq/_faq_card.html.erb
+++ b/app/views/static_pages/faq/_faq_card.html.erb
@@ -4,7 +4,7 @@
       <h2 class="secondary bold faq-question-title text-2xl">
         <%= faq_item[:question] %>
       </h2>
-      <i class="fas fa-plus camel expander"></i>
+      <i class="fas fa-chevron-down"></i>
     </div>
   </a>
 
