--- a/app/views/static_pages/faq/_faq_card.html.erb
+++ b/app/views/static_pages/faq/_faq_card.html.erb
@@ -1,17 +1,15 @@
-<div class="card faq-card">
-  <a role="button" data-toggle="collapse" data-parent="#faq-accordion" href="#faq-item-<%= index %>" aria-expanded="true" aria-controls="faq-item-<%= index %>" data-controller="faq" data-action="faq#collapseHandler">
+<div class="card faq-card" data-controller="reveal"> <!-- controller at top level -->
+  <a role="button" data-action="click->reveal#toggle"> <!-- toggle action to show and hide the content -->
     <div class="card-header faq-card-header" role="tab">
       <h2 class="secondary bold faq-question-title text-2xl">
         <%= faq_item[:question] %>
       </h2>
       <i class="fas fa-plus camel expander"></i>
-      <i class="fas fa-minus camel minimizer"></i>
-    </div> <!-- /.card-header-->
+    </div>
   </a>
 
-  <div id="faq-item-<%= index %>" class="collapse" role="tabpanel" aria-labelledby="faq-item-<%= index %>">
+  <div class="hidden" data-reveal-target="content"> <!-- content target -->
     <div class="card-block">
       <%= faq_item[:answer].html_safe %>
     </div>
-  </div> <!-- /.collapse -->
-</div> <!-- /.faq-card -->
+  </div></div> <!-- /.faq-card -->
