--- a/app/assets/stylesheets/dark-mode.css
+++ b/app/assets/stylesheets/dark-mode.css
@@ -1,7 +1,7 @@
 :root {
   --dark-bg-color: #121212;
   --dark-bg-accent: #1a1a1a;
-  --dark-font-color: #b3b3b3;
+  --dark-font-color: #cac7c7;
   --dark-header-color: #fff;
   --dark-pseudocode-color: #e83e8c;
   --dark-input-bg-color: #313131;
