--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -16,6 +16,8 @@ a {
   &:hover, &:focus {
     color: $black;
     text-decoration: none;
+    // keeping existing internal_link as it is, with this we could achieve this desired view on site as well
+    // position: revert;
   }
 }
 
