--- a/app/javascript/layouts/application.css
+++ b/app/javascript/layouts/application.css
@@ -3,6 +3,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-@import './typography.css';
 @import './buttons.css';
 @import './forms.css';
+@import './toggle.css';
+@import './typography.css';
