--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
       <div class="skills__header">
         <h2 class="skills__title text-2xl">Skills Progress</h2>
         <p class="skills__content">
-          The following courses should be taken in order.
+        <% current_user.path.courses.size > 1 ? 'The following courses should be taken in order' : null %>
         </p>
       </div>
 
